# fsel

./: CHANGELOG.md  CODE_STANDARDS.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_STANDARDS.md  README.md  RELEASELOG.md  RELEASE_1.0.0-riceknife.md  USAGE.md  color_examples.toml  config.toml  create_dmenu_symlink.sh  dist-workspace.toml  flake.nix  fsel.1  install.sh  keybinds.toml  refactor.md  result
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
fsel-0.3.0/: README.md  flake.nix
fsel-0.3.0/src/: dmenu.rs  input.rs  ui.rs
src/: cache.rs  cclip.rs  cli.rs  config.rs  dmenu.rs  graphics.rs  helpers.rs  input.rs  keybinds.rs  lib.rs  main.rs  process.rs  strings.rs  ui.rs  xdg.rs
src/app/: cclip.rs  mod.rs  paths.rs
src/cli/: color.rs  error.rs  from_config.rs  help.rs  launch.rs  mod.rs  parse.rs  types.rs  validate.rs
src/cli/parse/: helpers.rs  mod.rs  overrides.rs
src/cli/types/: enums.rs  mod.rs  opts.rs
src/common/: item.rs
src/common/item/: display.rs  matching.rs  mod.rs
src/config/: defaults.rs  env.rs  error.rs  mod.rs  schema.rs
src/config/env/: app_launcher.rs  cclip.rs  dmenu.rs  general.rs  helpers.rs  layout.rs  mod.rs  ui.rs
src/core/: cache.rs  database.rs  debug_logger.rs  mod.rs  path_key.rs  state.rs
src/core/cache/: desktop.rs  history.rs  mod.rs  tables.rs
src/core/hidden_entries/: mod.rs  model.rs  store.rs  visibility.rs
src/core/ranking/: frecency.rs  mod.rs  query.rs  sort.rs
src/core/ranking/query/: bucket.rs  matcher.rs  mod.rs
src/core/state/: filter.rs  info.rs  mod.rs  update.rs
src/desktop/: app.rs  dirs.rs  discover.rs  icons.rs  mod.rs  parse.rs
src/desktop/icons/: index.rs  theme.rs
src/modes/: mod.rs
src/modes/app_launcher/: admin.rs  direct.rs  events.rs  icons.rs  launch.rs  mod.rs  run.rs  search.rs  session.rs
src/modes/cclip/: commands.rs  events.rs  image.rs  items.rs  metadata.rs  mod.rs  model.rs  preview.rs  render.rs  run.rs  scan.rs  select.rs  session.rs  state.rs  tags.rs
src/modes/cclip/events/: keyboard.rs  mod.rs  mouse.rs  selection.rs
src/modes/cclip/image/: fullscreen.rs  loading.rs  mod.rs
src/modes/cclip/render/: input.rs  mod.rs  panels.rs
src/modes/dmenu/: events.rs  mod.rs  options.rs  parse.rs  preview.rs  render.rs  run.rs
src/platform/: mod.rs  process.rs
src/ui/: app_list.rs  app_ui.rs  dmenu_ui.rs  graphics.rs  input.rs  keybinds.rs  mod.rs  panel_layout.rs  terminal.rs  types.rs
src/ui/dmenu_ui/: content.rs  filter.rs  mod.rs  tag_mode.rs
src/ui/dmenu_ui/content/: cclip.rs  lines.rs  mod.rs
tests/: cli_behavior.rs
tests/fixtures/: legacy-config.toml
