[package]
name = "fsel"
version = "1.0.1-riceknife"
authors = ["Namkhai B. <me@forkbomb9.ch>"]
edition = "2021"
rust-version = "1.70"

description = "Fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD"

homepage = "https://github.com/Mjoyufull/fsel"
repository = "https://github.com/Mjoyufull/fsel"
readme = "README.md"
keywords = ["tui", "tools"]
categories = ["os"]
license = "BSD-2-Clause"

[profile.release]
lto = true
strip = true

[dependencies]
bincode = "1.3"
eyre = "0.6"
lexopt = "0.3"
directories = "5.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.0"
sled = "0.34"
crossterm = "0.27"
scopeguard = "1.1"
toml = "0.7"
ratatui = { version = "0.22.0", default-features = false, features = ["crossterm"]}
walkdir = "2.3"
which = "4.4"
is-terminal = "0.4"
strip-ansi-escapes = "0.2"
base64 = "0.22"
tokio = { version = "1.0", features = ["process", "rt", "rt-multi-thread", "io-util"] }
