[package]
name = "fsel"
version = "2.3.0-seedclay"
authors = ["Mjoyufull <https://github.com/Mjoyufull>"]
edition = "2021"
rust-version = "1.89"

description = "Fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD"

homepage = "https://github.com/Mjoyufull/fsel"
repository = "https://github.com/Mjoyufull/fsel"
readme = "README.md"
keywords = ["tui", "launcher", "fuzzy-finder", "dmenu"]
categories = ["command-line-utilities"]
license = "BSD-2-Clause"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
bincode = { version = "1.3", default-features = false }
eyre = "0.6"
lexopt = "0.3"
directories = "5.0"
dirs = "5.0"
nucleo-matcher = "0.3.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
redb = "3.1"
crossterm = "0.29"
scopeguard = "1.2"
toml = "0.9"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"]}
walkdir = "2.5"
which = "8.0"
is-terminal = "0.4"
strip-ansi-escapes = "0.2"
base64 = "0.22"
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "io-util"], default-features = false }
unicode-width = "0.2.0"
regex = "1.11"
