[package]
name = "fsel"
version = "3.0.0-kiwicrab"
authors = ["Mjoyufull <https://github.com/Mjoyufull>"]
edition = "2021"
rust-version = "1.89"

description = "Fast TUI app launcher and fuzzy finder for GNU/Linux and *BSD"

homepage = "https://github.com/Mjoyufull/fsel"
repository = "https://github.com/Mjoyufull/fsel"
readme = "README.md"
keywords = ["tui", "launcher", "fuzzy-finder", "dmenu"]
categories = ["command-line-utilities"]
license = "BSD-2-Clause"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
eyre = "0.6"
lexopt = "0.3"
directories = "6.0"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
nucleo-matcher = "0.3.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
redb = "3.1"
crossterm = { version = "0.29", features = ["event-stream"] }
scopeguard = "1.2"
toml = "0.9"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29", "layout-cache"]}
which = "8.0"
is-terminal = "0.4"
strip-ansi-escapes = "0.2"
tokio = { version = "1.49", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util"] }
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "tokio"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
futures = "0.3"
unicode-width = "0.2.2"

jwalk = "0.8.1"
rayon = "1.11.0"
